Time: 2 ms (64.26%), Space: 42.7 MB (61.26%) - LeetHub